<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primario_variante"
    android:padding="20dp"
    tools:ignore="UseSwitchCompatOrMaterialXml">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtLayoutNombre"
                android:layout_marginBottom="5dp"
                android:background="@color/primario">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@color/secundario"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtLayoutApellidoUno"
                android:background="@color/primario">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_apellido1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@color/secundario"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_foto_contacto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/user_add_image" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutApellidoDos"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_apellido2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutTelefonoUno"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefono1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutTelefonoDos"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefono2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutEmail"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutNacimiento"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fecha_cumpleanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLayoutNotaPersonal"
        android:layout_marginBottom="5dp"
        android:background="@color/primario">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mensaje_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/secundario"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switch_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/txtSwitchVip"
        android:background="@color/secundario"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBotonGuardar"
        android:backgroundTint="@color/primario"/>

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBotonCancelar"
        android:backgroundTint="@color/negro"/>
</LinearLayout>

