<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/primario_variante"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/secundario"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:srcCompat="@android:drawable/ic_menu_myplaces"
                android:contentDescription="@string/desc_imagen_app" />

            <TextView
                android:id="@+id/txt_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/fuente_titulo"
                android:text="@string/txt_titulo_app"
                android:textColor="@color/negro"
                android:textSize="40sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="-1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/boton_menu_ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primario"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_dialog_dialer"
                android:contentDescription="@string/desc_boton_ver" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/primario_variante"
                android:visibility="gone"
                android:queryHint="Buscar por nombre" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/secundario"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAniadir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_contactos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/background_recycler"
            android:clipToPadding="false"
            android:contentDescription="@string/desc_recycler_contactos"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="16dp"
            android:overScrollMode="ifContentScrolls"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBuscar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:maxImageSize="50dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primario"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAniadir"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAniadir"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        app:maxImageSize="120dp"
        android:src="@drawable/user_add_image"
        android:backgroundTint="@color/primario"
        android:contentDescription="@string/desc_boton_aniadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        app:fabSize="normal"
        android:adjustViewBounds="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnResumen"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primario"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAniadir"
        app:maxImageSize="50dp" />



</androidx.constraintlayout.widget.ConstraintLayout>